--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,30 @@
-/* ol li{
-    list-style-type:decimal;
+ol li{
+    color: brown;
+    list-style : numeric;
+      margin: auto;
+      width: 95%;
+      padding:1px;
+      padding-top: 10px;
+} 
+#unorded{
+      list-style-type:square;
+      margin: auto;
+      width: 95%;
+      padding: 1px;
+      padding-top: 10px;
+}
+body{
+   background-color:wheat;
+}
+
+footer{
+    background: #eee;
+    text-align: center;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:100px;   
     margin: auto;
-    width: 50%;
-    padding: 1px;
-    padding-top: 10px;
-} */
+}
+
+    
