--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-ol li{
-    color: brown;
+ ol li{
+    color:white;
     list-style : numeric;
       margin: auto;
       width: 95%;
@@ -12,19 +12,70 @@ ol li{
       width: 95%;
       padding: 1px;
       padding-top: 10px;
+      margin: 5px;
+      padding-left: 12px;
+      color:black;
 }
 body{
-   background-color:wheat;
+    margin-top:100px;
+    padding:0px;
+   background-repeat: no-repeat;
+   background-size:cover;
+   background-image: url(https://c1.wallpaperflare.com/preview/427/745/192/notebook-natural-laptop-macbook.jpg);
 }
+   
 
 footer{
     background: #eee;
     text-align: center;
-    position:absolute;
     bottom:0;
-    width:100%;
-    height:100px;   
-    margin: auto;
+    margin-top: 300px;
+    padding: 50px;
+    right: 0px;
+    left:0px;
+    height: 50px;
+    font-size: 20px;
+
+
+} 
+
+
+header{
+    background-color: white;
+    height: 80px;
+    font-size: 18px; 
+    position:fixed;
+     top:0px;
+    left: 0px;
+    right: 0px;
+
+    
+}
+
+
+header li {
+    display: inline;
+    margin: 20px;
+
+    
+}
+
+header li a {
+ color: black;
+ text-decoration: none;
+}
+
+h3{
+color:white;
+}
+
+div {
+ background-color:beige ;
+ border-style: outset;
+}
+h1{
+text-align: center;
+color:white;
 }
 
     
